--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-    "name": "gengojs-site",
-    "version": "0.0.3",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www"
-    },
-    "dependencies": {
-        "body-parser": "~1.9.2",
-        "bower": "^1.3.12",
-        "cookie-parser": "~1.3.3",
-        "debug": "~2.1.0",
-        "express": "*",
-        "gengojs": "^0.3.55",
-        "jade": "*",
-        "morgan": "~1.4.1",
-        "serve-favicon": "~2.1.6"
-    }
+  "name": "gengojs-site",
+  "version": "0.0.3",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.9.2",
+    "bower": "^1.3.12",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.1.0",
+    "express": "*",
+    "gengojs": "^0.3.55",
+    "jade": "*",
+    "morgan": "~1.4.1",
+    "serve-favicon": "~2.1.6"
+  },
+  "devDependencies": {
+    "compression": "^1.2.0"
+  }
 }
