--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "private": true,
   "scripts": {
+    "postinstall":"npm install && ./node_modules/bower/bin/bower install",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -18,8 +19,5 @@
   },
   "devDependencies": {
     "compression": "^1.2.0"
-  },
-  "scripts":{
-    "postinstall":"npm install && ./node_modules/bower/bin/bower install"
   }
 }
