--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "animate.css": "~3.2.0",
     "bootswatch": "~3.2.0+4",
     "fontawesome": "~4.2.0",
-    "prism": "git@github.com:LeaVerou/prism.git#gh-pages"
+    "prism": "git@github.com:LeaVerou/prism.git#gh-pages",
+    "jquery-cookie": "~1.4.1"
   }
 }
